RESOLVED FIXED105936
[EFL][WebGL] Crash of WebKitTestRunner when running webgl layout tests.
https://bugs.webkit.org/show_bug.cgi?id=105936
Summary [EFL][WebGL] Crash of WebKitTestRunner when running webgl layout tests.
Viatcheslav Ostapenko
Reported 2013-01-02 12:41:07 PST
crash log for WebKitTestRunner (pid 14961): STDOUT: <empty> STDERR: ASSERTION FAILED: !from.isEmpty() STDERR: /home/sl/work/webkit/Source/WebCore/platform/graphics/transforms/TransformationMatrix.cpp(963) : static WebCore::TransformationMatrix WebCore::TransformationMatrix::rectToRect(const WebCore::FloatRect&, const WebCore::FloatRect&) STDERR: 1 0xb39ce072 WebCore::TransformationMatrix::rectToRect(WebCore::FloatRect const&, WebCore::FloatRect const&) STDERR: 2 0xb447e1a4 WebCore::GraphicsSurface::platformPaintToTextureMapper(WebCore::TextureMapper*, WebCore::FloatRect const&, WebCore::TransformationMatrix const&, float, WebCore::BitmapTexture*) STDERR: 3 0xb447dcde WebCore::GraphicsSurface::paintToTextureMapper(WebCore::TextureMapper*, WebCore::FloatRect const&, WebCore::TransformationMatrix const&, float, WebCore::BitmapTexture*) STDERR: 4 0xb39bdcc1 WebCore::TextureMapperSurfaceBackingStore::paintToTextureMapper(WebCore::TextureMapper*, WebCore::FloatRect const&, WebCore::TransformationMatrix const&, float, WebCore::BitmapTexture*) STDERR: 5 0xb39c1770 WebCore::TextureMapperLayer::paintSelf(WebCore::TextureMapperPaintOptions const&) STDERR: 6 0xb39c1852 WebCore::TextureMapperLayer::paintSelfAndChildren(WebCore::TextureMapperPaintOptions const&) STDERR: 7 0xb39c1fdd WebCore::TextureMapperLayer::paintSelfAndChildrenWithReplica(WebCore::TextureMapperPaintOptions const&) STDERR: 8 0xb39c20e8 WebCore::TextureMapperLayer::paintRecursive(WebCore::TextureMapperPaintOptions const&) STDERR: 9 0xb39c1962 WebCore::TextureMapperLayer::paintSelfAndChildren(WebCore::TextureMapperPaintOptions const&) STDERR: 10 0xb39c1fdd WebCore::TextureMapperLayer::paintSelfAndChildrenWithReplica(WebCore::TextureMapperPaintOptions const&) STDERR: 11 0xb39c20e8 WebCore::TextureMapperLayer::paintRecursive(WebCore::TextureMapperPaintOptions const&) STDERR: 12 0xb39c1962 WebCore::TextureMapperLayer::paintSelfAndChildren(WebCore::TextureMapperPaintOptions const&) STDERR: 13 0xb39c1fdd WebCore::TextureMapperLayer::paintSelfAndChildrenWithReplica(WebCore::TextureMapperPaintOptions const&) STDERR: 14 0xb39c20e8 WebCore::TextureMapperLayer::paintRecursive(WebCore::TextureMapperPaintOptions const&) STDERR: 15 0xb39c1962 WebCore::TextureMapperLayer::paintSelfAndChildren(WebCore::TextureMapperPaintOptions const&) STDERR: 16 0xb39c1fdd WebCore::TextureMapperLayer::paintSelfAndChildrenWithReplica(WebCore::TextureMapperPaintOptions const&) STDERR: 17 0xb39c20e8 WebCore::TextureMapperLayer::paintRecursive(WebCore::TextureMapperPaintOptions const&) STDERR: 18 0xb39c1962 WebCore::TextureMapperLayer::paintSelfAndChildren(WebCore::TextureMapperPaintOptions const&) STDERR: 19 0xb39c1fdd WebCore::TextureMapperLayer::paintSelfAndChildrenWithReplica(WebCore::TextureMapperPaintOptions const&) STDERR: 20 0xb39c20e8 WebCore::TextureMapperLayer::paintRecursive(WebCore::TextureMapperPaintOptions const&) STDERR: 21 0xb39c1962 WebCore::TextureMapperLayer::paintSelfAndChildren(WebCore::TextureMapperPaintOptions const&) STDERR: 22 0xb39c1fdd WebCore::TextureMapperLayer::paintSelfAndChildrenWithReplica(WebCore::TextureMapperPaintOptions const&) STDERR: 23 0xb39c20e8 WebCore::TextureMapperLayer::paintRecursive(WebCore::TextureMapperPaintOptions const&) STDERR: 24 0xb39c1962 WebCore::TextureMapperLayer::paintSelfAndChildren(WebCore::TextureMapperPaintOptions const&) STDERR: 25 0xb39c1fdd WebCore::TextureMapperLayer::paintSelfAndChildrenWithReplica(WebCore::TextureMapperPaintOptions const&) STDERR: 26 0xb39c20e8 WebCore::TextureMapperLayer::paintRecursive(WebCore::TextureMapperPaintOptions const&) STDERR: 27 0xb39c1962 WebCore::TextureMapperLayer::paintSelfAndChildren(WebCore::TextureMapperPaintOptions const&) STDERR: 28 0xb39c1fdd WebCore::TextureMapperLayer::paintSelfAndChildrenWithReplica(WebCore::TextureMapperPaintOptions const&) STDERR: 29 0xb39c20e8 WebCore::TextureMapperLayer::paintRecursive(WebCore::TextureMapperPaintOptions const&) STDERR: 30 0xb39c1962 WebCore::TextureMapperLayer::paintSelfAndChildren(WebCore::TextureMapperPaintOptions const&) STDERR: 31 0xb39c1fdd WebCore::TextureMapperLayer::paintSelfAndChildrenWithReplica(WebCore::TextureMapperPaintOptions const&) STDERR: LEAK: 4 WebCoreNode
Attachments
Patch (2.88 KB, patch)
2013-01-02 12:55 PST, Viatcheslav Ostapenko
no flags
Patch (4.52 KB, patch)
2013-01-02 16:07 PST, Viatcheslav Ostapenko
no flags
Viatcheslav Ostapenko
Comment 1 2013-01-02 12:55:53 PST
Viatcheslav Ostapenko
Comment 2 2013-01-02 15:20:28 PST
Comment on attachment 181049 [details] Patch Better patch is coming.
Viatcheslav Ostapenko
Comment 3 2013-01-02 16:07:28 PST
Laszlo Gombos
Comment 4 2013-01-07 20:33:39 PST
Comment on attachment 181097 [details] Patch Great, looks good to me.
WebKit Review Bot
Comment 5 2013-01-07 20:59:24 PST
Comment on attachment 181097 [details] Patch Clearing flags on attachment: 181097 Committed r139030: <http://trac.webkit.org/changeset/139030>
WebKit Review Bot
Comment 6 2013-01-07 20:59:28 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.