[EFL][WebGL] Crash of WebKitTestRunner when running webgl layout tests https://bugs.webkit.org/show_bug.cgi?id=105936

Patch by Viatcheslav Ostapenko <sl.ostapenko@samsung.com> on 2013-01-07
Reviewed by Laszlo Gombos.

If canvas window becomes invalid don't create pixmap from it and don't
use it for painting.

Improves stability of existing webgl layout tests.

* platform/graphics/surfaces/glx/GraphicsSurfaceGLX.cpp:
(WebCore::GraphicsSurfacePrivate::createPixmap):
(WebCore::GraphicsSurfacePrivate::size):
(WebCore::GraphicsSurface::platformGetTextureID):
(WebCore::GraphicsSurface::platformPaintToTextureMapper):

Canonical link: https://commits.webkit.org/124490@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@139030 268f45cc-cd09-0410-ab3c-d52691b4dbfc